--- a/Univer/Web.config
+++ b/Univer/Web.config
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=appdb.co6sqmpgl9xh.eu-west-1.rds.amazonaws.com;Initial Catalog=SIS;user id=admin;password=BusyWork(9;"  providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\University.mdf;Initial Catalog=University;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
